--- a/src/tests/JIT/HardwareIntrinsics/X86_Avx10/Avx10v1_Avx512F_VL_Vector128/Avx10v1_Avx512F_VL_Vector128_r.csproj
+++ b/src/tests/JIT/HardwareIntrinsics/X86_Avx10/Avx10v1_Avx512F_VL_Vector128/Avx10v1_Avx512F_VL_Vector128_r.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <AssemblyName>X86_Avx10v1_r</AssemblyName>
+    <AssemblyName>X86_Avx10v1_Avx512F_VL_Vector128_r</AssemblyName>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
@@ -8,7 +8,7 @@
     <Optimize />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.Avx10v1.cs" />
+    <Compile Include="Program.Avx10v1_Avx512F_VL_Vector128.cs" />
     <Compile Include="..\..\X86\Shared\Program.cs" />
   </ItemGroup>
 </Project>
