--- a/src/tests/JIT/HardwareIntrinsics/X86_Avx10/Avx10v1_Avx512F_VL_Vector128/Avx10v1_Avx512F_VL_Vector128_ro.csproj
+++ b/src/tests/JIT/HardwareIntrinsics/X86_Avx10/Avx10v1_Avx512F_VL_Vector128/Avx10v1_Avx512F_VL_Vector128_ro.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <AssemblyName>X86_Avx10v1_handwritten_ro</AssemblyName>
+    <AssemblyName>X86_Avx10v1_Avx512F_VL_Vector128_ro</AssemblyName>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
@@ -8,7 +8,7 @@
     <Optimize>True</Optimize>
   </PropertyGroup>
   <ItemGroup>
-    <!-- <Compile Include="..\..\X86\Shared\SimpleUnOpTest_DataTable.cs" /> -->
-    <Compile Include="Avx10v1AbsTest.cs" />
+    <Compile Include="Program.Avx10v1_Avx512F_VL_Vector128.cs" />
+    <Compile Include="..\..\X86\Shared\Program.cs" />
   </ItemGroup>
 </Project>
